practice3/y.output
   0  $accept : PROGRAM $end

   1  PROGRAM : S_EXP_LIST

   2  S_EXP_LIST : S_EXP
   3             | S_EXP_LIST S_EXP

   4  S_EXP : DATA
   5        | SEPARATOR_LB S_EXP_LIST SEPARATOR_RB

   6  KEY : IDENTIFIER
   7      | STRING

   8  DTYPE : STRING
   9        | NUMBER

  10  DATA : CALC_EXP
  11       | KEYWORD_LIST SEPARATOR_LB DATA SEPARATOR_RB
  12       | KEY_VALUE_S_EXP

  13  KEY_VALUE_S_EXP : KEY DTYPE
  14                  | KEY SEPARATOR_LB DATA SEPARATOR_RB

  15  CALC_EXP : KEYWORD_CALC SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB

  16  OPERAND : IDENTIFIER
  17          | DTYPE

  18  EXPRESSION : SUMMA
  19             | EXPRESSION OPERATIONS_COMPARE SUMMA

  20  SUMMA : MULTIPLICATION
  21        | SUMMA OPERATIONS_SUM MULTIPLICATION

  22  MULTIPLICATION : OPERAND
  23                 | MULTIPLICATION OPERATIONS_MUL OPERAND

  24  OPERATOR_LIST : SEPARATOR_LB OPERATOR SEPARATOR_RB
  25                | SEPARATOR_LB OPERATOR SEPARATOR_RB OPERATOR_LIST

  26  OPERATOR_RETURN : KEYWORD_RETURN SEPARATOR_LB VALUE SEPARATOR_RB

  27  OPERATOR : OPERATOR_ASSIGNMENT
  28           | OPERATOR_DEFINE
  29           | OPERATOR_WHILE
  30           | OPERATOR_CALL
  31           | OPERATOR_PUSH

  32  IDENTIFIER_LIST : IDENTIFIER
  33                  | IDENTIFIER IDENTIFIER_LIST

  34  OPERATOR_PUSH : KEYWORD_PUSH SEPARATOR_LB VALUE SEPARATOR_RB

  35  OPERATOR_CALL : KEYWORD_CALL IDENTIFIER CALL

  36  CALL : SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB

  37  OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB EXPRESSION SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB

  38  VALUE : EXPRESSION
  39        | IDENTIFIER
  40        | OPERATOR_CALL

  41  OPERATOR_ASSIGNMENT : KEYWORD_VAR IDENTIFIER SEPARATOR_LB VALUE SEPARATOR_RB
  42                      |

  43  OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB
  44                  | KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB
  45                  |

  46  OPERATIONS_SUM : SEPARATOR_PLUS
  47                 | SEPARATOR_MINUS

  48  OPERATIONS_COMPARE : SEPARATOR_GT
  49                     | SEPARATOR_LT

  50  OPERATIONS_MUL : SEPARATOR_MUL
  51                 | SEPARATOR_DIV

state 0
	$accept : . PROGRAM $end  (0)

	IDENTIFIER  shift 1
	STRING  shift 2
	SEPARATOR_LB  shift 3
	KEYWORD_CALC  shift 4
	KEYWORD_LIST  shift 5
	.  error

	PROGRAM  goto 6
	S_EXP_LIST  goto 7
	S_EXP  goto 8
	DATA  goto 9
	KEY  goto 10
	CALC_EXP  goto 11
	KEY_VALUE_S_EXP  goto 12


state 1
	KEY : IDENTIFIER .  (6)

	.  reduce 6


state 2
	KEY : STRING .  (7)

	.  reduce 7


state 3
	S_EXP : SEPARATOR_LB . S_EXP_LIST SEPARATOR_RB  (5)

	IDENTIFIER  shift 1
	STRING  shift 2
	SEPARATOR_LB  shift 3
	KEYWORD_CALC  shift 4
	KEYWORD_LIST  shift 5
	.  error

	S_EXP_LIST  goto 13
	S_EXP  goto 8
	DATA  goto 9
	KEY  goto 10
	CALC_EXP  goto 11
	KEY_VALUE_S_EXP  goto 12


state 4
	CALC_EXP : KEYWORD_CALC . SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB  (15)

	SEPARATOR_LB  shift 14
	.  error


state 5
	DATA : KEYWORD_LIST . SEPARATOR_LB DATA SEPARATOR_RB  (11)

	SEPARATOR_LB  shift 15
	.  error


state 6
	$accept : PROGRAM . $end  (0)

	$end  accept


state 7
	PROGRAM : S_EXP_LIST .  (1)
	S_EXP_LIST : S_EXP_LIST . S_EXP  (3)

	IDENTIFIER  shift 1
	STRING  shift 2
	SEPARATOR_LB  shift 3
	KEYWORD_CALC  shift 4
	KEYWORD_LIST  shift 5
	$end  reduce 1

	S_EXP  goto 16
	DATA  goto 9
	KEY  goto 10
	CALC_EXP  goto 11
	KEY_VALUE_S_EXP  goto 12


state 8
	S_EXP_LIST : S_EXP .  (2)

	.  reduce 2


state 9
	S_EXP : DATA .  (4)

	.  reduce 4


state 10
	KEY_VALUE_S_EXP : KEY . DTYPE  (13)
	KEY_VALUE_S_EXP : KEY . SEPARATOR_LB DATA SEPARATOR_RB  (14)

	STRING  shift 17
	NUMBER  shift 18
	SEPARATOR_LB  shift 19
	.  error

	DTYPE  goto 20


state 11
	DATA : CALC_EXP .  (10)

	.  reduce 10


state 12
	DATA : KEY_VALUE_S_EXP .  (12)

	.  reduce 12


state 13
	S_EXP_LIST : S_EXP_LIST . S_EXP  (3)
	S_EXP : SEPARATOR_LB S_EXP_LIST . SEPARATOR_RB  (5)

	IDENTIFIER  shift 1
	STRING  shift 2
	SEPARATOR_LB  shift 3
	SEPARATOR_RB  shift 21
	KEYWORD_CALC  shift 4
	KEYWORD_LIST  shift 5
	.  error

	S_EXP  goto 16
	DATA  goto 9
	KEY  goto 10
	CALC_EXP  goto 11
	KEY_VALUE_S_EXP  goto 12


state 14
	CALC_EXP : KEYWORD_CALC SEPARATOR_LB . OPERATOR_LIST SEPARATOR_RB  (15)

	SEPARATOR_LB  shift 22
	.  error

	OPERATOR_LIST  goto 23


state 15
	DATA : KEYWORD_LIST SEPARATOR_LB . DATA SEPARATOR_RB  (11)

	IDENTIFIER  shift 1
	STRING  shift 2
	KEYWORD_CALC  shift 4
	KEYWORD_LIST  shift 5
	.  error

	DATA  goto 24
	KEY  goto 10
	CALC_EXP  goto 11
	KEY_VALUE_S_EXP  goto 12


state 16
	S_EXP_LIST : S_EXP_LIST S_EXP .  (3)

	.  reduce 3


state 17
	DTYPE : STRING .  (8)

	.  reduce 8


state 18
	DTYPE : NUMBER .  (9)

	.  reduce 9


state 19
	KEY_VALUE_S_EXP : KEY SEPARATOR_LB . DATA SEPARATOR_RB  (14)

	IDENTIFIER  shift 1
	STRING  shift 2
	KEYWORD_CALC  shift 4
	KEYWORD_LIST  shift 5
	.  error

	DATA  goto 25
	KEY  goto 10
	CALC_EXP  goto 11
	KEY_VALUE_S_EXP  goto 12


state 20
	KEY_VALUE_S_EXP : KEY DTYPE .  (13)

	.  reduce 13


state 21
	S_EXP : SEPARATOR_LB S_EXP_LIST SEPARATOR_RB .  (5)

	.  reduce 5


22: reduce/reduce conflict (reduce 42, reduce 45) on SEPARATOR_RB
state 22
	OPERATOR_LIST : SEPARATOR_LB . OPERATOR SEPARATOR_RB  (24)
	OPERATOR_LIST : SEPARATOR_LB . OPERATOR SEPARATOR_RB OPERATOR_LIST  (25)
	OPERATOR_ASSIGNMENT : .  (42)
	OPERATOR_DEFINE : .  (45)

	KEYWORD_VAR  shift 26
	KEYWORD_PUSH  shift 27
	KEYWORD_WHILE  shift 28
	KEYWORD_DEFINE  shift 29
	KEYWORD_CALL  shift 30
	SEPARATOR_RB  reduce 42

	OPERATOR  goto 31
	OPERATOR_ASSIGNMENT  goto 32
	OPERATOR_DEFINE  goto 33
	OPERATOR_WHILE  goto 34
	OPERATOR_CALL  goto 35
	OPERATOR_PUSH  goto 36


state 23
	CALC_EXP : KEYWORD_CALC SEPARATOR_LB OPERATOR_LIST . SEPARATOR_RB  (15)

	SEPARATOR_RB  shift 37
	.  error


state 24
	DATA : KEYWORD_LIST SEPARATOR_LB DATA . SEPARATOR_RB  (11)

	SEPARATOR_RB  shift 38
	.  error


state 25
	KEY_VALUE_S_EXP : KEY SEPARATOR_LB DATA . SEPARATOR_RB  (14)

	SEPARATOR_RB  shift 39
	.  error


state 26
	OPERATOR_ASSIGNMENT : KEYWORD_VAR . IDENTIFIER SEPARATOR_LB VALUE SEPARATOR_RB  (41)

	IDENTIFIER  shift 40
	.  error


state 27
	OPERATOR_PUSH : KEYWORD_PUSH . SEPARATOR_LB VALUE SEPARATOR_RB  (34)

	SEPARATOR_LB  shift 41
	.  error


state 28
	OPERATOR_WHILE : KEYWORD_WHILE . SEPARATOR_LB EXPRESSION SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB  (37)

	SEPARATOR_LB  shift 42
	.  error


state 29
	OPERATOR_DEFINE : KEYWORD_DEFINE . IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB  (43)
	OPERATOR_DEFINE : KEYWORD_DEFINE . IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)

	IDENTIFIER  shift 43
	.  error


state 30
	OPERATOR_CALL : KEYWORD_CALL . IDENTIFIER CALL  (35)

	IDENTIFIER  shift 44
	.  error


state 31
	OPERATOR_LIST : SEPARATOR_LB OPERATOR . SEPARATOR_RB  (24)
	OPERATOR_LIST : SEPARATOR_LB OPERATOR . SEPARATOR_RB OPERATOR_LIST  (25)

	SEPARATOR_RB  shift 45
	.  error


state 32
	OPERATOR : OPERATOR_ASSIGNMENT .  (27)

	.  reduce 27


state 33
	OPERATOR : OPERATOR_DEFINE .  (28)

	.  reduce 28


state 34
	OPERATOR : OPERATOR_WHILE .  (29)

	.  reduce 29


state 35
	OPERATOR : OPERATOR_CALL .  (30)

	.  reduce 30


state 36
	OPERATOR : OPERATOR_PUSH .  (31)

	.  reduce 31


state 37
	CALC_EXP : KEYWORD_CALC SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB .  (15)

	.  reduce 15


state 38
	DATA : KEYWORD_LIST SEPARATOR_LB DATA SEPARATOR_RB .  (11)

	.  reduce 11


state 39
	KEY_VALUE_S_EXP : KEY SEPARATOR_LB DATA SEPARATOR_RB .  (14)

	.  reduce 14


state 40
	OPERATOR_ASSIGNMENT : KEYWORD_VAR IDENTIFIER . SEPARATOR_LB VALUE SEPARATOR_RB  (41)

	SEPARATOR_LB  shift 46
	.  error


state 41
	OPERATOR_PUSH : KEYWORD_PUSH SEPARATOR_LB . VALUE SEPARATOR_RB  (34)

	IDENTIFIER  shift 47
	STRING  shift 17
	NUMBER  shift 18
	KEYWORD_CALL  shift 30
	.  error

	DTYPE  goto 48
	OPERAND  goto 49
	EXPRESSION  goto 50
	SUMMA  goto 51
	MULTIPLICATION  goto 52
	VALUE  goto 53
	OPERATOR_CALL  goto 54


state 42
	OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB . EXPRESSION SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB  (37)

	IDENTIFIER  shift 55
	STRING  shift 17
	NUMBER  shift 18
	.  error

	DTYPE  goto 48
	OPERAND  goto 49
	EXPRESSION  goto 56
	SUMMA  goto 51
	MULTIPLICATION  goto 52


state 43
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER . SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB  (43)
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER . SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)

	SEPARATOR_LB  shift 57
	.  error


state 44
	OPERATOR_CALL : KEYWORD_CALL IDENTIFIER . CALL  (35)

	SEPARATOR_LB  shift 58
	.  error

	CALL  goto 59


state 45
	OPERATOR_LIST : SEPARATOR_LB OPERATOR SEPARATOR_RB .  (24)
	OPERATOR_LIST : SEPARATOR_LB OPERATOR SEPARATOR_RB . OPERATOR_LIST  (25)

	SEPARATOR_LB  shift 22
	SEPARATOR_RB  reduce 24
	KEYWORD_RETURN  reduce 24

	OPERATOR_LIST  goto 60


state 46
	OPERATOR_ASSIGNMENT : KEYWORD_VAR IDENTIFIER SEPARATOR_LB . VALUE SEPARATOR_RB  (41)

	IDENTIFIER  shift 47
	STRING  shift 17
	NUMBER  shift 18
	KEYWORD_CALL  shift 30
	.  error

	DTYPE  goto 48
	OPERAND  goto 49
	EXPRESSION  goto 50
	SUMMA  goto 51
	MULTIPLICATION  goto 52
	VALUE  goto 61
	OPERATOR_CALL  goto 54


47: reduce/reduce conflict (reduce 16, reduce 39) on SEPARATOR_RB
state 47
	OPERAND : IDENTIFIER .  (16)
	VALUE : IDENTIFIER .  (39)

	.  reduce 16


state 48
	OPERAND : DTYPE .  (17)

	.  reduce 17


state 49
	MULTIPLICATION : OPERAND .  (22)

	.  reduce 22


state 50
	EXPRESSION : EXPRESSION . OPERATIONS_COMPARE SUMMA  (19)
	VALUE : EXPRESSION .  (38)

	SEPARATOR_GT  shift 62
	SEPARATOR_LT  shift 63
	SEPARATOR_RB  reduce 38

	OPERATIONS_COMPARE  goto 64


state 51
	EXPRESSION : SUMMA .  (18)
	SUMMA : SUMMA . OPERATIONS_SUM MULTIPLICATION  (21)

	SEPARATOR_PLUS  shift 65
	SEPARATOR_MINUS  shift 66
	SEPARATOR_GT  reduce 18
	SEPARATOR_LT  reduce 18
	SEPARATOR_RB  reduce 18

	OPERATIONS_SUM  goto 67


state 52
	SUMMA : MULTIPLICATION .  (20)
	MULTIPLICATION : MULTIPLICATION . OPERATIONS_MUL OPERAND  (23)

	SEPARATOR_MUL  shift 68
	SEPARATOR_DIV  shift 69
	SEPARATOR_PLUS  reduce 20
	SEPARATOR_MINUS  reduce 20
	SEPARATOR_GT  reduce 20
	SEPARATOR_LT  reduce 20
	SEPARATOR_RB  reduce 20

	OPERATIONS_MUL  goto 70


state 53
	OPERATOR_PUSH : KEYWORD_PUSH SEPARATOR_LB VALUE . SEPARATOR_RB  (34)

	SEPARATOR_RB  shift 71
	.  error


state 54
	VALUE : OPERATOR_CALL .  (40)

	.  reduce 40


state 55
	OPERAND : IDENTIFIER .  (16)

	.  reduce 16


state 56
	EXPRESSION : EXPRESSION . OPERATIONS_COMPARE SUMMA  (19)
	OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB EXPRESSION . SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB  (37)

	SEPARATOR_GT  shift 62
	SEPARATOR_LT  shift 63
	SEPARATOR_RB  shift 72
	.  error

	OPERATIONS_COMPARE  goto 64


state 57
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB . IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB  (43)
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB . IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)

	IDENTIFIER  shift 73
	.  error

	IDENTIFIER_LIST  goto 74


state 58
	CALL : SEPARATOR_LB . IDENTIFIER_LIST SEPARATOR_RB  (36)

	IDENTIFIER  shift 73
	.  error

	IDENTIFIER_LIST  goto 75


state 59
	OPERATOR_CALL : KEYWORD_CALL IDENTIFIER CALL .  (35)

	.  reduce 35


state 60
	OPERATOR_LIST : SEPARATOR_LB OPERATOR SEPARATOR_RB OPERATOR_LIST .  (25)

	.  reduce 25


state 61
	OPERATOR_ASSIGNMENT : KEYWORD_VAR IDENTIFIER SEPARATOR_LB VALUE . SEPARATOR_RB  (41)

	SEPARATOR_RB  shift 76
	.  error


state 62
	OPERATIONS_COMPARE : SEPARATOR_GT .  (48)

	.  reduce 48


state 63
	OPERATIONS_COMPARE : SEPARATOR_LT .  (49)

	.  reduce 49


state 64
	EXPRESSION : EXPRESSION OPERATIONS_COMPARE . SUMMA  (19)

	IDENTIFIER  shift 55
	STRING  shift 17
	NUMBER  shift 18
	.  error

	DTYPE  goto 48
	OPERAND  goto 49
	SUMMA  goto 77
	MULTIPLICATION  goto 52


state 65
	OPERATIONS_SUM : SEPARATOR_PLUS .  (46)

	.  reduce 46


state 66
	OPERATIONS_SUM : SEPARATOR_MINUS .  (47)

	.  reduce 47


state 67
	SUMMA : SUMMA OPERATIONS_SUM . MULTIPLICATION  (21)

	IDENTIFIER  shift 55
	STRING  shift 17
	NUMBER  shift 18
	.  error

	DTYPE  goto 48
	OPERAND  goto 49
	MULTIPLICATION  goto 78


state 68
	OPERATIONS_MUL : SEPARATOR_MUL .  (50)

	.  reduce 50


state 69
	OPERATIONS_MUL : SEPARATOR_DIV .  (51)

	.  reduce 51


state 70
	MULTIPLICATION : MULTIPLICATION OPERATIONS_MUL . OPERAND  (23)

	IDENTIFIER  shift 55
	STRING  shift 17
	NUMBER  shift 18
	.  error

	DTYPE  goto 48
	OPERAND  goto 79


state 71
	OPERATOR_PUSH : KEYWORD_PUSH SEPARATOR_LB VALUE SEPARATOR_RB .  (34)

	.  reduce 34


state 72
	OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB EXPRESSION SEPARATOR_RB . SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB  (37)

	SEPARATOR_LB  shift 80
	.  error


state 73
	IDENTIFIER_LIST : IDENTIFIER .  (32)
	IDENTIFIER_LIST : IDENTIFIER . IDENTIFIER_LIST  (33)

	IDENTIFIER  shift 73
	SEPARATOR_RB  reduce 32

	IDENTIFIER_LIST  goto 81


state 74
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST . SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB  (43)
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST . SEPARATOR_RB SEPARATOR_LB SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)

	SEPARATOR_RB  shift 82
	.  error


state 75
	CALL : SEPARATOR_LB IDENTIFIER_LIST . SEPARATOR_RB  (36)

	SEPARATOR_RB  shift 83
	.  error


state 76
	OPERATOR_ASSIGNMENT : KEYWORD_VAR IDENTIFIER SEPARATOR_LB VALUE SEPARATOR_RB .  (41)

	.  reduce 41


state 77
	EXPRESSION : EXPRESSION OPERATIONS_COMPARE SUMMA .  (19)
	SUMMA : SUMMA . OPERATIONS_SUM MULTIPLICATION  (21)

	SEPARATOR_PLUS  shift 65
	SEPARATOR_MINUS  shift 66
	SEPARATOR_GT  reduce 19
	SEPARATOR_LT  reduce 19
	SEPARATOR_RB  reduce 19

	OPERATIONS_SUM  goto 67


state 78
	SUMMA : SUMMA OPERATIONS_SUM MULTIPLICATION .  (21)
	MULTIPLICATION : MULTIPLICATION . OPERATIONS_MUL OPERAND  (23)

	SEPARATOR_MUL  shift 68
	SEPARATOR_DIV  shift 69
	SEPARATOR_PLUS  reduce 21
	SEPARATOR_MINUS  reduce 21
	SEPARATOR_GT  reduce 21
	SEPARATOR_LT  reduce 21
	SEPARATOR_RB  reduce 21

	OPERATIONS_MUL  goto 70


state 79
	MULTIPLICATION : MULTIPLICATION OPERATIONS_MUL OPERAND .  (23)

	.  reduce 23


state 80
	OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB EXPRESSION SEPARATOR_RB SEPARATOR_LB . OPERATOR_LIST SEPARATOR_RB  (37)

	SEPARATOR_LB  shift 22
	.  error

	OPERATOR_LIST  goto 84


state 81
	IDENTIFIER_LIST : IDENTIFIER IDENTIFIER_LIST .  (33)

	.  reduce 33


state 82
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB . SEPARATOR_LB OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB  (43)
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB . SEPARATOR_LB SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)

	SEPARATOR_LB  shift 85
	.  error


state 83
	CALL : SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB .  (36)

	.  reduce 36


state 84
	OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB EXPRESSION SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST . SEPARATOR_RB  (37)

	SEPARATOR_RB  shift 86
	.  error


state 85
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB . OPERATOR_LIST OPERATOR_RETURN SEPARATOR_RB  (43)
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB . SEPARATOR_LB OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)

	SEPARATOR_LB  shift 87
	.  error

	OPERATOR_LIST  goto 88


state 86
	OPERATOR_WHILE : KEYWORD_WHILE SEPARATOR_LB EXPRESSION SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST SEPARATOR_RB .  (37)

	.  reduce 37


87: reduce/reduce conflict (reduce 42, reduce 45) on SEPARATOR_RB
state 87
	OPERATOR_LIST : SEPARATOR_LB . OPERATOR SEPARATOR_RB  (24)
	OPERATOR_LIST : SEPARATOR_LB . OPERATOR SEPARATOR_RB OPERATOR_LIST  (25)
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB SEPARATOR_LB . OPERATOR_RETURN SEPARATOR_RB SEPARATOR_RB  (44)
	OPERATOR_ASSIGNMENT : .  (42)
	OPERATOR_DEFINE : .  (45)

	KEYWORD_VAR  shift 26
	KEYWORD_PUSH  shift 27
	KEYWORD_WHILE  shift 28
	KEYWORD_DEFINE  shift 29
	KEYWORD_RETURN  shift 89
	KEYWORD_CALL  shift 30
	SEPARATOR_RB  reduce 42

	OPERATOR  goto 31
	OPERATOR_RETURN  goto 90
	OPERATOR_ASSIGNMENT  goto 32
	OPERATOR_DEFINE  goto 33
	OPERATOR_WHILE  goto 34
	OPERATOR_CALL  goto 35
	OPERATOR_PUSH  goto 36


state 88
	OPERATOR_DEFINE : KEYWORD_DEFINE IDENTIFIER SEPARATOR_LB IDENTIFIER_LIST SEPARATOR_RB SEPARATOR_LB OPERATOR_LIST . OPERATOR_RETURN SEPARATOR_RB  (43)

	KEYWORD_RETURN  shift 89
	.  error
